--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,7 +32,6 @@ body {
     margin-right:-4px;
 }
 
-
 .heading-styles {
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -43,19 +42,20 @@ h1 {
 }
 
 nav {
+  background: $bright-green;
   div {
     ul {
+
       text-align: center;
       list-style: none;
       padding: 0;
       margin: 0;
-      padding-top: 30px;
+      padding: 15px 0;
       text-decoration: none;
       li {
         font-size: 17px;
         display: inline-block;
         margin-left: 5px;
-        line-height: 40px;
         padding: 0 10px;
         &.menu {
           text-decoration: none;
