Modularised all controllers. UI Router updated to v1.0.4.

--- a/src/js/views/props/show.html
+++ b/src/js/views/props/show.html
@@ -1,6 +1,6 @@
 <section class="propTile">
   <div class="modal-header">
-    <button type="button" ng-click="propsShow.closeModal()" class="close" aria-label="Close"><span aria-hidden="true" >&times;</span>
+    <button ng-click="propsShow.closeModal()" class="close" aria-label="Close"><span aria-hidden="true" >&times;</span>
     </button>
   </div>
   <div class="modal-body">
@@ -14,7 +14,7 @@
       <li><strong>Property Type: </strong>{{propsShow.selected.property_type}}</li>
 
       <li class="description border">{{propsShow.selected.description}}</li>
-      
+
       <h3 class="border">Agency Info</h3>
       <li><strong>Company: </strong>{{propsShow.selected.agent_name}}</li>
       <li><strong>Contact: </strong>{{propsShow.selected.agent_phone}}</li>
