Active classes added to current state in navbar links.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,7 +87,7 @@ nav {
             text-decoration: none;
             color: $main-green;
           }
-          &:hover {
+          &:hover, &.active {
             margin-top: 10px;
             text-decoration: none;
             color: $main-green;
