--- a/src/js/views/groups/home.html
+++ b/src/js/views/groups/home.html
@@ -2,18 +2,16 @@
   <h1>{{ groupsHome.group.groupName }}</h1>
   <div class="row row-centered border">
     <div ng-repeat="user in groupsHome.group.users" class="col-xs-4 col-md-2 col-centered">
-      <!-- <img class="img-fluid thumbnail groupUsers" ng-src="{{ user.profileImageSRC }}"> -->
       <div class="groupUsers" style="background-image:url('{{ user.profileImageSRC }}')"></div>
     </div>
   </div>
-  <div class="border">
-    <button ng-click="groupsHome.delete()" class="deleteproperty">Delete</button>
+  <div>
+    <button ng-click="groupsHome.delete()" class="deleteproperty">Delete Group</button>
   </div>
-  <div class="border">
-    <p>Listing IDs:</p>
-    <ul ng-repeat="selected in groupsHome.selected.listing ">
+  <div>
+    <ul ng-repeat="selected in groupsHome.selected.listing" class="border">
+      <li><h1>{{selected.displayable_address}}</h1></li>
       <li><img ng-src="{{selected.image_645_430_url}}"></li>
-      <li><strong>Address: </strong>{{selected.displayable_address}}</li>
       <li><strong>Bedrooms: </strong>{{selected.num_bedrooms}}</li>
       <li><strong>Bathrooms: </strong>{{selected.num_bathrooms}}</li>
       <li><strong>Price: </strong>£{{selected.rental_prices.per_month}} ppm</li>
