--- a/src/js/views/groups/show.html
+++ b/src/js/views/groups/show.html
@@ -1,18 +1,18 @@
 <section class="container">
-  <div>
-    <h2>Property Details</h2>
-
-    <div class="row houseInfo border" ng-repeat="selected in groupsPropsShow.gps.listing">
+  <div ng-repeat="selected in groupsPropsShow.gps.listing">
+    <h1>{{ selected.displayable_address }}</h1>
+    <div class="row houseInfo border">
       <div class="col-sm-6">
         <img ng-src="{{selected.image_645_430_url}}" class="propertyimage">
       </div>
       <div class="col-sm-6">
         <ul>
           <li></li>
-          <li><strong>Bedrooms: </strong>{{selected.num_bedrooms}}</li>
-          <li><strong>Property Type: </strong>{{selected.property_type}}</li>
-          <li><strong>Price: </strong>£{{selected.rental_prices.per_month}} ppm</li>
-          <li class="address"><strong>Address: </strong>{{selected.displayable_address}}</li>
+          <li>{{selected.num_bedrooms}} bedrooms</li>
+          <li>{{selected.num_bathrooms}} bathrooms</li>
+          <li ng-if="selected.property_type.includes('house')"><img src="/images/house.png"></li>
+          <li ng-if="selected.property_type.includes('Flat')"><img src="/images/flat.png"></li>
+          <li>£{{selected.rental_prices.per_month}} pcm</li>
           <button ng-click="groupsPropsShow.deleteProperty(selected)" ng-if="main.isAuthenticated()" class="deleteproperty">Delete Property</button>
         </ul>
       </div>
@@ -46,15 +46,14 @@
       </form>
     </div>
     <div class="border overflow">
-      <div class="col-md-6 col-lg-6">
+      <div class="col-md-6">
 
         <h3>Images</h3>
-        <div class ="row">
-
-            <div ng-repeat="image in groupsPropsShow.prop.images track by $index" class="col-sm-4 col-md-4 col-lg-4">
-              <img ng-click="groupsPropsShow.openModal(image)" ng-src="{{ image.imageSRC }}" class="userimages img-fluid img-thumbnail">
-              <button ng-click="groupsPropsShow.deleteImage(image)" class="deleteimage">Delete</button>
-            </div>
+        <div class="row">
+          <div ng-repeat="image in groupsPropsShow.prop.images track by $index" class="col-sm-4 col-md-4 col-lg-4">
+            <img ng-click="groupsPropsShow.openModal(image)" ng-src="{{ image.imageSRC }}" class="userimages img-fluid img-thumbnail">
+            <button ng-click="groupsPropsShow.deleteImage(image)" class="deleteimage">Delete</button>
+          </div>
         </div>
 
         <div class="addimages row">
@@ -65,23 +64,24 @@
           </form>
         </div>
       </div>
+
       <div class="col-md-6 col-lg-6">
         <div class="row">
           <h3>Notes</h3>
-
           <div ng-repeat="note in groupsPropsShow.prop.notes track by $index" class="col-sm-3 col-md-3 col-lg-3 noteHeight">
             <strong>{{ note.createdBy.username }}</strong><br><p class="noteText">{{ note.text }}</p><br>
             <button ng-click="groupsPropsShow.deleteNote(note)" class="smaller">Delete</button>
-
           </div>
         </div>
+
         <div class="row addNotes">
           <form ng-submit="groupsPropsShow.addNote()" ng-if="main.isAuthenticated()">
-            <h3>Add Comments</h3>
+            <h3>Add Note</h3>
             <textarea ng-model="groupsPropsShow.newNote.text"></textarea><br>
             <button class="addcomment">Post</button>
           </form>
         </div>
+
       </div>
     </div>
     <div class="row border">
