--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -20,6 +20,6 @@
     </form>
   </div>
   <div>
-    <button ng-click="login.authenticate('facebook')">Sign in with Facebook</button>
+    <button ng-click="login.authenticate('facebook')">Log in with Facebook</button>
   </div>
 </section>
